--- a/grc/lte_pbch_scramble_sequencer_m.block.yml
+++ b/grc/lte_pbch_scramble_sequencer_m.block.yml
@@ -14,6 +14,6 @@ outputs:
 
 templates:
     imports: import lte
-    make: lte.pbch_scramble_sequencer_m("$id")
+    make: lte.pbch_scramble_sequencer_m('${id}')
 
 file_format: 1
